@@ -60,8 +60,16 @@ class Gem::Indexer
             begin
               spec = Gem::Format.from_file_by_path(gemfile).spec
 
-              unless gemfile =~ /\/#{spec.full_name}.*\.gem\z/i then
-                alert_warning "Skipping misnamed gem: #{gemfile} => #{spec.full_name}"
+              original_name = if spec.platform == Gem::Platform::RUBY or
+                                 spec.platform.nil? then
+                                spec.full_name
+                              else
+                                "#{spec.name}-#{spec.version}-#{spec.original_platform}"
+                              end
+
+              unless gemfile =~ /\/#{Regexp.escape spec.full_name}.*\.gem\z/i or
+                     gemfile =~ /\/#{Regexp.escape original_name}.*\.gem\z/i then
+                alert_warning "Skipping misnamed gem: #{gemfile} => #{spec.full_name} (#{original_name})"
                 next
               end
 
